# tree-sitter-lx

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
ftplugin/: lx.vim
queries/: highlights.scm
queries/lx/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: array.txt  arrow_function.txt  comments.txt  control_flow.txt  declaration.txt  expressions.txt  field_access.txt  hashmap.txt  inblock_statements.txt  primary.txt  shellbang.txt  statements.txt
test/highlight/: function.lx  kitchensink.lx  messy.lx
vim/ftdetect/: lx.vim
vim/indent/: lx.vim
vim/queries/lx/: highlights.scm  indents.scm
