[package]
name = "tree-sitter-lx"
description = "lx grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "lx"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-lx"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.24"
tree-sitter-language = "~0.1"

[build-dependencies]
cc = "1.0"
